[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["uhuddurmus <uhuddurmus@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
uvicorn = "^0.27.1"
fastapi = "^0.109.2"
sqlalchemy = "^2.0.27"
sqlmodel = "^0.0.16"
asyncpg = "^0.29.0"
psycopg2 = "^2.9.9"
alembic = "^1.13.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start="app.main:start"